--- a/package.json
+++ b/package.json
@@ -15,5 +15,11 @@
   "bugs": {
     "url": "https://github.com/1eeing/my_webpack_demo/issues"
   },
-  "homepage": "https://github.com/1eeing/my_webpack_demo#readme"
+  "homepage": "https://github.com/1eeing/my_webpack_demo#readme",
+  "dependencies": {
+    "mobx": "^5.5.2",
+    "mobx-react": "^5.3.6",
+    "react": "^16.6.0",
+    "react-router-dom": "^4.3.1"
+  }
 }
