--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "babel-loader": "^8.0.4",
     "cross-env": "^5.2.0",
     "html-webpack-plugin": "^3.2.0",
+    "react-hot-loader": "^4.3.12",
     "rimraf": "^2.6.2",
     "webpack": "^4.23.1",
     "webpack-cli": "^3.1.2",
