--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "build:client": "webpack --config build/webpack.config.client.js",
     "build:server": "webpack --config build/webpack.config.serve.js",
     "dev:client": "cross-env NODE_ENV=development webpack-dev-server --config build/webpack.config.client.js",
+    "dev:server": "cross-env NODE_ENV=development node server/server.js",
     "clear": "rimraf dist",
-    "build": "npm run clear && npm run build:client && npm run build:server",
-    "start": "node server/server.js"
+    "build": "npm run clear && npm run build:client && npm run build:server"
   },
   "repository": {
     "type": "git",
@@ -38,6 +38,8 @@
     "cross-env": "^5.2.0",
     "eslint": "^5.8.0",
     "html-webpack-plugin": "^3.2.0",
+    "http-proxy-middleware": "^0.19.0",
+    "memory-fs": "^0.4.1",
     "react-hot-loader": "^4.3.12",
     "rimraf": "^2.6.2",
     "webpack": "^4.23.1",
