--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -5,8 +5,15 @@
         "es6": true,
         "node": true
     },
+    "parserOptions": {
+        "ecmaVersion": 6,
+        "sourceType": "module"
+    },
     "extends": "airbnb",
     "rules": {
-
+		"react/jsx-filename-extension": [0],
+		"react/jsx-indent": [0],
+		"indent": [0],
+		"comma-dangle": [0]
     }
 }
