--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -14,6 +14,10 @@
 		"react/jsx-filename-extension": [0],
 		"react/jsx-indent": [0],
 		"indent": [0],
-		"comma-dangle": [0]
+		"comma-dangle": [0],
+		"no-tabs": [0],
+		"import/no-unresolved": [0],
+		"react/forbid-prop-types": [0],
+		"react/destructuring-assignment": [0]
     }
 }
