--- a/package.json
+++ b/package.json
@@ -24,10 +24,13 @@
   "homepage": "https://github.com/1eeing/my_webpack_demo#readme",
   "dependencies": {
     "axios": "^0.18.0",
+    "body-parser": "^1.18.3",
     "express": "^4.16.4",
+    "express-session": "^1.15.6",
     "mobx": "^5.5.2",
     "mobx-react": "^5.3.6",
     "prop-types": "^15.6.2",
+    "query-string": "^6.2.0",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
     "react-router-dom": "^4.3.1",
