--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -18,6 +18,7 @@
 		"no-tabs": [0],
 		"import/no-unresolved": [0],
 		"react/forbid-prop-types": [0],
-		"react/destructuring-assignment": [0]
+		"react/destructuring-assignment": [0],
+		"react/jsx-one-expression-per-line": [0]
     }
 }
